5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1644_2445.log
== TEST (2019-04-06 02:49:57) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "C":
	C = (5/9)*(F -32)
	print(round(C,4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    C = (5/9)*(F -32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:50:14) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "C":
	T = (5/9)*(F -32)
	print(round(T,4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    T = (5/9)*(F -32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:51:04) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "F":
	C = (5 / 9) * (temp - 32)
	print(round(C,4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    T = (5/9)*(F -32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:51:16) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "F":
	C = (5 / 9) * (temp - 32)
	print(round(C,4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    T = (5/9)*(F -32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:51:33) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "F":
	C = (5 / 9) * (temp - 32)
	print(round(C,4))
else:
	


-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:52:25) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "F":
	C = (5 / 9) * (temp - 32)
	print(round(C,4))
else:
	F = (5 / 9)* (temp + 32)
	print(round(F,4))


-- OUTPUT:
195.5556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:53:08) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "F":
	C = (5 / 9) * (temp - 32)
	print(round(C,4))
else:
	F = (5 / 9)*(temp + 232.4554)
	print(round(F,4))


-- OUTPUT:
306.9197
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:54:18) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "F":
	t = (5 / 9) * (temp - 32)
	print(round(t,4))
else:
	t = (5 / 9) * (temp + 32)
	print(round(t,4))


-- OUTPUT:
195.5556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:55:34) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "F":
	t = (5 / 9) * (temp - 32)
	print(round(t,4))
else:
	t = (9*temp)/5 + 32
	print(round(t,4))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 02:55:38) 
-- CODE:
escala = input("Celsius/Fahrenheit (C/F): ")
temp = float(input("Temperatura atual: "))

if escala == "F":
	t = (5 / 9) * (temp - 32)
	print(round(t,4))
else:
	t = (9*temp)/5 + 32
	print(round(t,4))


-- EXECUTION TIME:
0.132278
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
